add redirect arg

--- a/public/css/b_t/index.css
+++ b/public/css/b_t/index.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Microsoft YaHei", "Helvetica Neue", Helvetica, "Microsoft Yahei UI", Arial, SimHei, "\5B8B\4F53", simsun, sans-serif;
+    font-family: "Helvetica Neue","Helvetica,Arial","Microsoft Yahei","PingFang SC","sans-serif";
     -webkit-font-smoothing: antialiased;
     text-decoration: none;
 }
@@ -16,7 +16,7 @@ a:focus, a:hover {
     margin-left: auto;
 }
 .list-group{
-    padding-left: 10px;
+    /*padding-left: 10px;*/
 }
 @media (max-width: 1024px) {
     .container-fluid{
@@ -40,10 +40,9 @@ body h5{
     border-radius: 100px;
     margin: 0 auto;
     text-decoration: none;
-    padding: 0 15px;
+    padding: 0 10px;
     width:180px;
 }
-
 .nav-left a{
     color: white;
     text-decoration: none;
@@ -71,15 +70,15 @@ body h5{
     text-align: center;
 }
 .nav-center img{
-    width: 100%;
+    width:420px;
     text-align: center;
-    margin-top: 35px;
+    margin-top: -10px;
     margin-bottom: 30px;
 }
 .nav h3{
     color: white;
     text-align: center;
-    margin-top: 92px;
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 .main h3{
@@ -107,7 +106,6 @@ body h5{
     border: none;
     font-size: 12px;
     padding:  0;
-    letter-spacing: 0.5px;
     line-height: 20px;
     color: #999999;
     background: none;
@@ -122,6 +120,11 @@ body h5{
 @media(min-width: 768px)  {
     .meada {
         text-align: center;
+    }
+}
+@media (min-width: 1200px) {
+    .container{
+        width: 1130px;
     }
 }
 @media(min-width: 768px)  {
@@ -147,8 +150,8 @@ body h5{
     border: 1px solid #1EC8F3;
 }
 #login,#login-one,#login-two{
-    width: 200px;
-    height: 40px;
+    width: 160px;
+    line-height: 36px;
     cursor:pointer;
 }
 .login:hover{
@@ -160,10 +163,9 @@ body h5{
     box-shadow: 0 1px 5px 0 rgba(67,185,215,0.80);
 }
 .new{
-
     border: 1px #69c72b solid;
     background: #FFFFFF;
-    border-radius: 100px;
+    border-radius: 80px;
     font-size: 16px;
     line-height: 38px;
     color: #69c72b;
@@ -180,14 +182,34 @@ body h5{
 }
 .new:hover{
     color: #ffffff;
-    background: -webkit-linear-gradient(left,#A2E556,#6ECC30 );
-    background: -o-linear-gradient(left,#A2E556,#6ECC30 );
-    background: -moz-linear-gradient(left,#A2E556,#6ECC30 );
-    background: linear-gradient(left,#A2E556,#6ECC30 );
+    /*background: -webkit-linear-gradient(left,#A2E556,#6ECC30 );*/
+    /*background: -o-linear-gradient(left,#A2E556,#6ECC30 );*/
+    /*background: -moz-linear-gradient(left,#A2E556,#6ECC30 );*/
+    /*background: linear-gradient(left,#A2E556,#6ECC30 );*/
+    /*filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=1);*/
+    /*-ms-filter: progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=1);*/
     border: none;
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A2E556', endColorstr='#6ECC30',GradientType=1 );*/
+    /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=1, startColorstr='#A2E556', endColorstr='#6ECC30')";*/
+    /*background: -moz-linear-gradient(left,#A2E556,#6ECC30 );*/
+    /*background: -webkit-linear-gradient(left,#A2E556,#6ECC30);*/
+    /*background: -o-linear-gradient(left,#A2E556,#6ECC30);*/
+    /*background: -ms-linear-gradient(left,#A2E556,#6ECC30);*/
+    /*background: linear-gradient(left,#A2E556,#6ECC30);*/
+    background: #6ECC30;
+    background: -moz-linear-gradient(top, #A2E556 0%, #6ECC30 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A2E556), color-stop(100%,#6ECC30));
+    background: -webkit-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
+    background: -o-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
+    background: -ms-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
+    background: linear-gradient(to bottom, #A2E556 0%,#6ECC30 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#6ECC30',GradientType=0 );
+
 }
+:root {filter:none;}
 .old{
     color: #69C72B;
+    margin-left: -30px;
     display: inline-block;
 }
 .old a{
@@ -227,7 +249,7 @@ body h5{
     border-radius:50%;
     background: #69c72b;
     margin-bottom: 4px;
-    margin-right: 2px;
+    margin-right: 4px;
     margin-left: -6px;
 }
 .title h5{
@@ -268,7 +290,7 @@ body h5{
     border-radius:50%;
     background: #3dc0f0;
     margin-bottom: 4px;
-    margin-right: 2px;
+    margin-right: 4px;
     margin-left: -6px;
 }
 .introduceringt1 img{
@@ -276,26 +298,46 @@ body h5{
     margin-top: 35px;
 }
 .introduceringt2 img{
-    width: 145px;
-    height: auto;
+    width: auto;
+    height: 38px;
     margin-top: 15px;
     margin-bottom: 47px;
 }
 .introduceringt3 img{
-    width:100%;
-    margin-top: 50px;
+    width:auto;
+    height: 160px;
+    margin-top: 30px;
 }
 .value{
     background:  #FAFAFA;
 }
 #adnavs{
-    margin-bottom: 20px;
+    margin: 10px 0 40px;
 }
 #adnavs .line-h{
     color:#ffffff;
     text-align: center;
     margin-left: 20%;
     width: 60%;
+}
+.line-hh{
+    color:#ffffff;
+    text-align: center;
+    padding: 10px 0 10px 0;
+}
+.ad-dt{
+    border-radius:5px;
+    opacity:0.8;
+    border:1px solid rgba(255,255,255,1);
+    background:rgba(255,255,255,0.07);
+
+}
+.ad-dt:hover{
+    background:rgba(255,255,255,0.27);
+    border:1px solid rgba(255,255,255,0.97);
+    border-radius:5px;
+    opacity:1;
+    cursor: pointer;
 }
 .line-h{
     color:#ffffff;
@@ -322,6 +364,12 @@ body h5{
     width: 40px;
     height: 26px;
 }
+.line-hh img{
+    width: auto;
+    height: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
 .line-h:hover{
     background: rgba(255,255,255,0.3) no-repeat;
 }
@@ -333,6 +381,7 @@ body h5{
     position: absolute;
     font-weight: lighter;
     right: 0;
+    opacity: 0.8;
     top:25%;
 }
 .dd{
@@ -364,7 +413,6 @@ body h5{
     height: auto;
     width: 24px;
     line-height: 38px;
-    /*margin-left: 18px;*/
     position: relative;
     left:0;
 }
@@ -375,7 +423,8 @@ body h5{
     margin-left: 18px;
 }
 .main-right img{
-    width:100%;
+    width:420px;
+    height: auto;
     text-align: center;
     margin-top: 15px;
 }
@@ -386,11 +435,18 @@ body h5{
     color: #3dc0f0;
 }
 .titleone{
-    color: #666666;
+    color: #515354;
     letter-spacing: 0.5px;
     line-height: 22px;
-    text-indent: 28px;
-    font-weight: 320;
+    /*font-weight: 320;*/
+}
+.text-center{
+    font-size: 12px;
+    line-height: 16px;
+}
+.text-centers{
+    font-size: 12px;
+    padding-bottom: 6px;
 }
 #drop dd{
     margin-bottom: 30px;
@@ -468,7 +524,7 @@ a:hover{
     margin-left: -15px;
 }
 .move2{
-    padding-left: 0px;
+    padding-left: 0;
     padding-right: 0;
 }
 .move3{
