--- a/public/css/b_t/index.css
+++ b/public/css/b_t/index.css
@@ -9,100 +9,113 @@ a{
 a:focus, a:hover {
     text-decoration: none;
 }
-.container-fluid {
-    padding-right: 50px;
-    padding-left: 50px;
-    margin-right: auto;
-    margin-left: auto;
+/* header */
+.header {
+    padding: 30px 0;
 }
-.list-group{
-    /*padding-left: 10px;*/
+.header .title {
+    text-align: center;
+    color: #ffffff;
+    font-size: 24px;
+    margin-top: 40px;
 }
-@media (max-width: 1024px) {
-    .container-fluid{
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-}
-body h5{
-    color: #8EC63F;
-    font-size: 16px;
-}
-.nav{
-    background: #8EC63F;
-}
-.nav-left {
-    font-size: 14px;
-    color: white;
-    border: 1px #eeeeee solid;
-    border-radius: 100px;
-    margin: 0 auto;
-    text-decoration: none;
-    padding: 0 10px;
-    width:180px;
-}
-.nav-left a{
-    color: white;
-    text-decoration: none;
-    margin-left: -15px;
-}
-.text-left{
+.header .desc {
+    color: #ffffff;
+    line-height: 24px;
+    text-indent: 28px;
     margin-top: 30px;
-    margin-bottom: 20px;
-    padding-left: 0;
-    padding-right: 0;
     font-size: 14px;
-    line-height: 36px;
+}
+.header .img {
+    width: auto;
     text-align: center;
+    height: 260px;
+    display: block;
+    margin: 0 auto;
 }
-.text-left:hover{
-    opacity:1;
-}
-.text-left img{
-    width: 24px;
-    height: auto;
-    left: 19px;
-    position:relative;
-}
-.nav-center{
-    text-align: center;
-}
-.nav-center img{
-    width:420px;
-    text-align: center;
-    margin-top: -10px;
-    margin-bottom: 30px;
-}
-.nav h3{
-    color: white;
-    text-align: center;
+.ad-box{
     margin-top: 20px;
-    margin-bottom: 30px;
+    width: 200px;
+    height:56px;
+    margin-left: auto; margin-right: auto;
+    background:rgba(255,255,255,0.09);
+    border-radius:5px;
+    border:1px solid rgba(255,255,255,0.7);
+    transition: all .3s ease-in;
+    display: block;
 }
-.main h3{
-    margin-bottom: 30px;
-    margin-top: 50px;
+.ad-box:hover{
+    cursor: pointer;
+    background:rgba(255,255,255,0);
+    border:1px solid rgba(255,255,255,0.8);
 }
-.nav p{
-    color: white;
+.ad-box img{
+    height: 20px;
+    width: auto;
+    margin-bottom: 25px;
+    padding-right: 20px;
+    border-right: 1px solid #FFFFFF;
+}
+.ad-box .icon {
+    margin-left: 20px;
+}
+.ad-box .span {
+    display: inline-block;
+    color: #FFFFFF;
+    font-size: 13px;
+    line-height: 23px;
+    padding-top: 5px;
     text-align: center;
-    font-size: 12px;
-    margin-top: 12px;
+    padding-left: 10px;
 }
-.nav p:nth-child(1){
-    margin-top: 20px;
-}
-#navs{
-    margin-bottom: 20px;
-    padding-left: -15px;
-    padding-right: -15px;
-}
+/* item */
 .introduce{
     background:#ffffff ;
+    padding: 50px 0;
 }
-.worth ul li{
+.introduce.gray {
+    background: #fafafa;
+}
+.introduce .img {
+    width: auto;
+    height: 160px;
+}
+.introduce .logo {
+    width: auto;
+    height: 38px;
+    margin-top: 15px;
+}
+.introduce .title {
+    margin-bottom: 20px;
+    font-size: 16px;
+    background: none;
+}
+.introduce .title:before {
+    content:"|";
+    float: left;
+    font-size: 16px;
+    font-weight: 800;
+    padding-right: 6px;
+}
+.introduce .title.ad {
+    color: #6ECC30;
+}
+.introduce .title.ad:before {
+    color:#69C72B;
+}
+.introduce .title.ut {
+    color: #3dc0f0;
+}
+.introduce .title.ut:before {
+    color:#3dc0f0;
+}
+.introduce .title.vt {
+    color: #8EC63F;
+}
+.introduce .title.vt:before {
+    color:#8EC63F;
+}
+.introduce ul li{
     border: none;
     font-size: 12px;
     padding:  0;
@@ -110,429 +123,152 @@ body h5{
     color: #999999;
     background: none;
     margin-bottom: 8px;
+    margin-left: 6px;
 }
-.worth ul li:first-child{
+.introduce ul li:first-child{
     font-size: 14px;
     color:#666666;
     margin-bottom: 5px;
     padding: 0;
+    margin-left: 0;
 }
-@media(min-width: 768px)  {
-    .meada {
-        text-align: center;
-    }
-}
-@media (min-width: 1200px) {
-    .container{
-        width: 1130px;
-    }
-}
-@media(min-width: 768px)  {
-    .meadaut {
-        text-align: center;
-    }
-}
-.new img{
-    width: auto;
-    height: 28px;
-    padding-left: 25px;
-    margin-bottom: 4px;
-}
-.login{
-    font-size: 16px;
-    line-height: 38px;
-    border-radius: 100px;
-    color: #1EC8F3;
-    margin-top: 50px;
-    padding: 0 25px;
-    width: 200px;
-    display: inline-block;
-    border: 1px solid #1EC8F3;
-}
-#login,#login-one,#login-two{
-    width: 160px;
-    line-height: 36px;
-    cursor:pointer;
-}
-.login:hover{
-    color: #FFFFFF;
-    background: -webkit-linear-gradient(left,#40E6FA 0%, #40E6FA 0%, #2DD5F6 0%, #1EC8F3 97% );
-    background: -o-linear-gradient(left,#40E6FA 0%, #40E6FA 0%, #2DD5F6 0%, #1EC8F3 97% );
-    background: -moz-linear-gradient(left,#40E6FA 0%, #40E6FA 0%, #2DD5F6 0%, #1EC8F3 97% );
-    background: linear-gradient(left,#40E6FA 0%, #40E6FA 0%, #2DD5F6 0%, #1EC8F3 97% );
-    box-shadow: 0 1px 5px 0 rgba(67,185,215,0.80);
-}
-.new{
-    border: 1px #69c72b solid;
-    background: #FFFFFF;
-    border-radius: 80px;
-    font-size: 16px;
-    line-height: 38px;
-    color: #69c72b;
-    display: inline-block;
-    padding: 0 25px;
-    margin-bottom: 50px;
-    width: 200px
-}
-#new,#new-one,#new-two,#new-three,#login,#login-one,#login-two{
-    width: 200px;
-    height: 40px;
-    cursor:pointer;
-    text-align: center;
-}
-.new:hover{
-    color: #ffffff;
-    /*background: -webkit-linear-gradient(left,#A2E556,#6ECC30 );*/
-    /*background: -o-linear-gradient(left,#A2E556,#6ECC30 );*/
-    /*background: -moz-linear-gradient(left,#A2E556,#6ECC30 );*/
-    /*background: linear-gradient(left,#A2E556,#6ECC30 );*/
-    /*filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=1);*/
-    /*-ms-filter: progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=1);*/
-    border: none;
-    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A2E556', endColorstr='#6ECC30',GradientType=1 );*/
-    /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=1, startColorstr='#A2E556', endColorstr='#6ECC30')";*/
-    /*background: -moz-linear-gradient(left,#A2E556,#6ECC30 );*/
-    /*background: -webkit-linear-gradient(left,#A2E556,#6ECC30);*/
-    /*background: -o-linear-gradient(left,#A2E556,#6ECC30);*/
-    /*background: -ms-linear-gradient(left,#A2E556,#6ECC30);*/
-    /*background: linear-gradient(left,#A2E556,#6ECC30);*/
-    background: #6ECC30;
-    background: -moz-linear-gradient(top, #A2E556 0%, #6ECC30 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#A2E556), color-stop(100%,#6ECC30));
-    background: -webkit-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
-    background: -o-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
-    background: -ms-linear-gradient(top, #A2E556 0%,#6ECC30 100%);
-    background: linear-gradient(to bottom, #A2E556 0%,#6ECC30 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#6ECC30',GradientType=0 );
-
-}
-:root {filter:none;}
-.old{
-    color: #69C72B;
-    margin-left: -30px;
-    display: inline-block;
-}
-.old a{
-    line-height: 38px;
-    font-size: 16px;
-    color: #69C72B;
-    display: inline-block;
-}
-.old a:hover{
-    color: #69C72B;
-    display: inline-block;
-}
-.leftimg{
-    text-align: center;
-}
-.login img{
-    width: auto;
-    height: 28px;
-    margin-left: 53px;
-    margin-bottom: 4px;
-}
-.tits{
-    font-size:14px ;
-    color: #666666;
-    float: left;
-    margin-bottom: 5px;
-}
-.seed{
-    line-height: 20px;
-    font-size: 12px;
-    color: #888888;
-}
-.dot{
+.introduce .dot{
     display:inline-block;
     width:4px;
     height:4px;
     border-radius:50%;
+    margin-bottom: 4px;
+    margin-right: 4px;
+    margin-left: -6px;
+}
+.ad .introduce a {
+    color: #69c72b;
+}
+.ad {
+    background: #65AF45;
+}
+.ad .introduce .dot {
     background: #69c72b;
-    margin-bottom: 4px;
-    margin-right: 4px;
-    margin-left: -6px;
 }
-.title h5{
-    float: left;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    color: #6ECC30;
-}
-.title h5:before {
-    content:"|";
-    float: left;
-    color:#69C72B;
+.ad .introduce .link {
     font-size: 16px;
-    font-weight: 800;
-    padding-right: 6px;
-}
-.title-one{
-    margin-top: 10px;
-    color: #666666;
-    line-height: 22px;
-}
-.title-one h5{
-    color:#3dc0f0;
-    margin-top: 40px;
-}
-.title-one h5:before{
-    content:"|";
-    float: left;
-    color:#3dc0f0;
-    font-size: 16px;
-    font-weight: 700;
-    padding-right: 6px;
-}
-.dots{
-    display:inline-block;
-    width:4px;
-    height:4px;
-    border-radius:50%;
-    background: #3dc0f0;
-    margin-bottom: 4px;
-    margin-right: 4px;
-    margin-left: -6px;
-}
-.introduceringt1 img{
-    width:100%;
-    margin-top: 35px;
-}
-.introduceringt2 img{
-    width: auto;
-    height: 38px;
-    margin-top: 15px;
-    margin-bottom: 47px;
-}
-.introduceringt3 img{
-    width:auto;
-    height: 160px;
-    margin-top: 30px;
-}
-.value{
-    background:  #FAFAFA;
-}
-#adnavs{
-    margin: 10px 0 40px;
-}
-#adnavs .line-h{
-    color:#ffffff;
-    text-align: center;
-    margin-left: 20%;
-    width: 60%;
-}
-.line-hh{
-    color:#ffffff;
-    text-align: center;
-    padding: 10px 0 10px 0;
-}
-.ad-dt{
-    border-radius:5px;
-    opacity:0.8;
-    border:1px solid rgba(255,255,255,1);
-    background:rgba(255,255,255,0.07);
-
-}
-.ad-dt:hover{
-    background:rgba(255,255,255,0.27);
-    border:1px solid rgba(255,255,255,0.97);
-    border-radius:5px;
-    opacity:1;
-    cursor: pointer;
-}
-.line-h{
-    color:#ffffff;
-    text-align: center;
-    margin-left: 20%;
-    width: 60%;
-    padding: 10px 0 10px 0;
-}
-@media (min-width: 768px) and (max-width: 921px){
-    .line-h{
-        width: 80%;
-        margin-left: 10%;
-    }
-}
-.line-h dt{
-    padding: 10px 0;
-}
-.line-h dd{
-    padding-bottom: 5px;
-    font-size: 12px;
-    letter-spacing: 1.36px;
-}
-.line-h img{
-    width: 40px;
-    height: 26px;
-}
-.line-hh img{
-    width: auto;
-    height: 20px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-.line-h:hover{
-    background: rgba(255,255,255,0.3) no-repeat;
-}
-.line:after
-{content:"|";
-    float: right;
-    color:#ffffff;
-    font-size: 20px;
-    position: absolute;
-    font-weight: lighter;
-    right: 0;
-    opacity: 0.8;
-    top:25%;
-}
-.dd{
-    line-height: 16px;
-    font-size: 12px;
-}
-.main{
-    background:#3dc0f0;
-}
-.box{
-    border: 1px #ffffff solid;
+    line-height: 38px;
     border-radius: 100px;
-    display: inline-block;
-    padding: 0 5px;
-    margin-left: 30px;
-}
-.main-left{
-    margin-top: 35px;
-    border: 1px #ffffff solid;
-    border-radius: 100px;
-    text-align: center;
-}
-.main-left span{
-    font-size: 14px;
-    line-height: 38px;
-    color: white;
-}
-.main-left img{
-    height: auto;
-    width: 24px;
-    line-height: 38px;
-    position: relative;
-    left:0;
-}
-.main-left .img1{
-    margin-left: 20px;
-}
-.main-left .img2{
-    margin-left: 18px;
-}
-.main-right img{
-    width:420px;
-    height: auto;
-    text-align: center;
-    margin-top: 15px;
-}
-.sign, .code{
-    margin-top: 50px;
-    line-height: 38px;
-    font-size: 16px;
-    color: #3dc0f0;
-}
-.titleone{
-    color: #515354;
-    letter-spacing: 0.5px;
-    line-height: 22px;
-    /*font-weight: 320;*/
-}
-.text-center{
-    font-size: 12px;
-    line-height: 16px;
-}
-.text-centers{
-    font-size: 12px;
-    padding-bottom: 6px;
-}
-#drop dd{
-    margin-bottom: 30px;
-}
-.text-new{
-    line-height: 38px;
-}
-.new a{
-    color: #69c72b;
-}
-.login a{
-    color: #00B1E8;
-}
-.login a:hover{
-    color: #FFFFFF;
-}
-.code a{
-    color: #1EC8F3;
-    text-decoration: none;
-}
-.code a:hover{
-    color: #1EC8F3;;
-}
-a:hover{
-    text-decoration: none;
-    color: #FFFFFF;
-}
-@media (min-width: 768px) {
-    .login,.box{
-        text-align: center;
-    }
-}
-@media (min-width: 768px) and (max-width: 991px){
-    .login,.box,.new{
-        text-align: center;
-    }
-}
-@media (min-width: 992px) and (max-width: 1199px){
-    .login,.box,.new{
-        text-align: center;
-    }
-}
-@media (min-width: 1024px) and (max-width: 1326px){
-    .login, .box,.new{
-        float: left;
-    }
-}
-@media (max-width: 320px){
-    .main-left{
-        display: none;
-    }
-}
-@media (max-width: 600px){
-    .main-left{
-        display: none;
-    }
-}
-@media (max-width: 1024px) {
-    .code, .old,.text-new,.text-login{
-        text-align: center;
-    }
-}
-.worth ul li{
-    padding-left: 6px;
-}
-.move-a{
+    padding: 0 25px;
     width: 200px;
-    height: 100%;
+}
+.ad .introduce .link {
+    color: #69c72b;
+    border: 1px solid #69c72b;
+    transition: all .2s linear;
+}
+.ad .introduce .link:hover{
+    color: #FFFFFF;
+    background: #69c72b;
+}
+.ad .introduce a {
+    color: #69c72b;
+    line-height: 38px;
+    font-size: 14px;
+    text-align: center;
     display: block;
 }
-.span1{
-    padding-left: 20px;
+.ut{
+    background:#3dc0f0;
 }
-.span2{
-    margin-left: -15px;
+.ut .introduce .dot {
+    background: #3dc0f0;
 }
-.move2{
-    padding-left: 0;
-    padding-right: 0;
+.ut .introduce .link {
+    font-size: 16px;
+    line-height: 38px;
+    border-radius: 100px;
+    padding: 0 25px;
+    width: 200px;
 }
-.move3{
-    padding-left: 0;
-    padding-right: 0;
+.ut .introduce .link {
+    color: #3dc0f0;
+    border: 1px solid #3dc0f0;
+    transition: all .2s linear;
 }
-@media (min-width: 920px){
-    .mains {
-        width:402px!important;
+.ut .introduce .link:hover{
+    color: #FFFFFF;
+    background: #3dc0f0;
+}
+.ut .introduce a {
+    color: #3dc0f0;
+    line-height: 38px;
+    font-size: 14px;
+    text-align: center;
+    display: block;
+}
+.vt{
+    background:#8EC63F;
+}
+.vt .introduce .dot {
+    background: #8EC63F;
+}
+.vt .introduce .link {
+    font-size: 16px;
+    line-height: 38px;
+    border-radius: 100px;
+    padding: 0 25px;
+    width: 200px;
+}
+.vt .introduce .link {
+    color: #8EC63F;
+    border: 1px solid #8EC63F;
+    transition: all .2s linear;
+}
+.vt .introduce .link:hover{
+    color: #FFFFFF;
+    background: #8EC63F;
+}
+.vt .introduce a {
+    color: #8EC63F;
+    line-height: 38px;
+    font-size: 14px;
+    text-align: center;
+    display: block;
+}
+@media (max-width: 768px) {
+    .header .title{
+        font-size: 18px;
+        margin-top: 10px;
+    }
+    .header .desc {
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
+    .header .img {
+        width: 100%;
+        height: auto;
+    }
+    .header .ad-box {
+        margin-top: 15px;
+    }
+    .introduce{
+        padding: 30px 0;
+    }
+    .introduce img {
+        display: block;
+        margin: 0 auto;
+    }
+    .introduce .title {
+        margin-top: 30px;
+        text-align: center;
+    }
+    .introduce .title::before {
+        display: none;
+    }
+    .introduce ul li:first-child {
+        text-align: center;
+    }
+    .introduce .link {
+        margin: 20px auto 0 auto;
+        display: block;
+    }
+    .introduce .old-link {
+        margin: 10px 0 0 0;
     }
 }
