--- a/public/css/wechat2.css
+++ b/public/css/wechat2.css
@@ -15,11 +15,12 @@ body {
     }
 }
 iframe{
-    height: 280px;
+    height: 290px;
+    width:100%;
 }
 @media (min-width: 1400px) {
     iframe{
-       height: 400px;
+        height: 290px;
     }
 }
 .impowerBox .title {
