--- a/public/css/bj_login/index.css
+++ b/public/css/bj_login/index.css
@@ -23,8 +23,8 @@ body {
 .main-image {
     height: 100%;
     z-index: 300;
-    background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bg2x.png") no-repeat center;
-    /*background:url(../img/bg2x.png) no-repeat  center;*/
+    background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bg2x.jpg") no-repeat center;
+    /*background:url(../img/bg2x.jpg) no-repeat  center;*/
     position: relative;
     background-size: 100% 100%;
     width: 100%;
@@ -112,7 +112,7 @@ body button {
     width: 55%;
     float: left;
     box-sizing: border-box;
-    border-right: 1px solid #FAFAFA;
+    border-right: 1px solid #eeeeee;
     background-color: #fff;
     border-radius: 10px 0 0 10px;
 }
@@ -308,7 +308,7 @@ body button {
 .main_right {
     width: 45%;
     border-radius: 0px 10px 10px 0px;
-    box-shadow: -1px 0px 0px 0px rgba(0, 0, 0, 0.1);
+    /*box-shadow: -1px 0px 0px 0px rgba(0, 0, 0, 0.1);*/
     background-color: #fff;
     float: right;
     padding-bottom: 62px;
@@ -429,7 +429,7 @@ body button {
     display: none;
 }
 
-.spinner {
+.spinner_bak {
     font-size: 30px;
     width: 1em;
     height: 1em;
@@ -439,7 +439,7 @@ body button {
     box-shadow: inset 0 0 0 .1em rgba(58, 168, 237, .2);
 }
 
-.spinner i {
+.spinner_bak i {
     position: absolute;
     clip: rect(0, 1em, 1em, .5em);
     width: 1em;
@@ -589,8 +589,8 @@ select:-webkit-autofill {
         right: 0;
     }
     .main-image {
-        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.png") no-repeat;
-        /*background: url(../img/bgpic.png) no-repeat;*/
+        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.jpg") no-repeat;
+        /*background: url(../img/bgpic.jpg) no-repeat;*/
         background-size: cover;
     }
     #main_right_tohiden {
@@ -694,8 +694,11 @@ select:-webkit-autofill {
     .yxInput {
         width: 80%;
     }
-    .tel,
-    main_left_body_line_input {
+
+    .tel{
+        width:188px;
+    }
+    .main_left_body_line_input {
         width: 60%;
     }
     .main_left_body_line_input,
@@ -729,6 +732,7 @@ select:-webkit-autofill {
     #yxInput {
         margin-left: 16.5px;
     }
+
     .main_left_body_line_yzm {
         width: 78px;
         height: 26.5px;
@@ -786,8 +790,8 @@ select:-webkit-autofill {
         display: block;
     }
     .main-image {
-        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.png") no-repeat;
-        /*background: url(../img/bgpic.png) no-repeat;*/
+        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.jpg") no-repeat;
+        /*background: url(../img/bgpic.jpg) no-repeat;*/
         background-size: cover;
     }
     #main_right_tohiden {
@@ -944,8 +948,8 @@ select:-webkit-autofill {
         display: block;
     }
     .main-image {
-        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.png") no-repeat;
-        /*background: url(../img/bgpic.png) no-repeat;*/
+        background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bgpic.jpg") no-repeat;
+        /*background: url(../img/bgpic.jpg) no-repeat;*/
         background-size: cover;
     }
     #main_right_tohiden {
@@ -1138,4 +1142,60 @@ select:-webkit-autofill {
         padding: 0;
         font-size: 13px
     }
+}
+#code_img{
+    cursor: pointer
+}
+.loading_app .circular {
+    vertical-align: middle;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    animation: loading-rotate 2s linear infinite;
+}
+.loading_app .circular .path {
+    animation: loading-dash 1.5s ease-in-out infinite;
+    stroke-dasharray: 90,150;
+    stroke-dashoffset: 0;
+    stroke-width: 2;
+    stroke: #fff;
+    stroke-linecap: round;
+}
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(180deg);
+    }
+}
+@-webkit-keyframes  spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(180deg);
+    }
+}
+@keyframes loading-rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes loading-dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -40px;
+    }
+    100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -120px;
+    }
+}
+.intl-tel-input.allow-dropdown .flag-container:hover .selected-flag{
+    background: #ffffff !important;
 }
