add redirect arg

--- a/public/css/bj_login/index.css
+++ b/public/css/bj_login/index.css
@@ -242,8 +242,8 @@ body button {
 .main_left_body_line_icon3 {
     width: 22px;
     height: 22px;
-    background-image: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/code.png");
-    /*background-image: url("../img/code.png");*/
+    /*background-image: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/code.png");*/
+    background-image: url("../img/code.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     float: left;
@@ -260,20 +260,23 @@ body button {
 
 .tel,
 .yxInput {
-    height: 49px;
+    height: 24px;
     font-size: 16px;
     color: #333;
     float: left;
     display: block;
     margin-left: 7px;
-    line-height: 49px;
+    line-height: 24px;
     outline: none;
     border: 0;
+    margin-top: 12px;
 }
-
+.intl-tel-input{
+    margin-top: 12px;
+}
 .main_left_body_line_input {
     width: 130px;
-    height: 49px;
+    height: 24px;
     font-size: 16px;
     color: #333;
     float: left;
@@ -282,6 +285,7 @@ body button {
     line-height: 49px;
     outline: none;
     border: 0;
+    margin-top: 12px;
 }
 
 .main_left_body_line_input::-webkit-input-placeholder,
@@ -313,6 +317,7 @@ body button {
     float: right;
     padding-bottom: 62px;
     padding-top: 59px;
+    min-height: 416px;
 }
 
 .main_right_ewm {
@@ -346,6 +351,7 @@ body button {
 
 #yxInput {
     margin-left: 15px;
+    margin-top: 12px;
 }
 
 .main_left_button {
@@ -492,7 +498,7 @@ body button {
     }
 }
 
-.spinner i:after {
+.spinner_bak i:after {
     position: absolute;
     clip: rect(0, 1em, 1em, .5em);
     width: 1em;
@@ -704,16 +710,17 @@ select:-webkit-autofill {
     .main_left_body_line_input,
     .tel,
     .yxInput {
-        height: 49px;
+        height: 24px;
         font-size: 14px;
         color: #333;
         float: left;
         display: block;
         margin-left: 13px;
-        line-height: 49px;
+        line-height: 24px;
         outline: none;
         border: 0;
         background: none;
+        margin-top: 12px;
     }
     .main_left_body_line_input::-webkit-input-placeholder,
     .tel::-webkit-input-placeholder,
@@ -761,6 +768,7 @@ select:-webkit-autofill {
     .tit a h4 {
         font-size: 15px;
         padding: 0;
+        margin-left: 40px;
     }
     #test h5 {
         font-size: 15px;
@@ -1021,16 +1029,17 @@ select:-webkit-autofill {
     .main_left_body_line_input,
     .tel,
     .yxInput {
-        height: 49px;
+        height: 24px;
         font-size: 28px;
         color: #333;
         float: left;
         display: block;
         margin-left: 7px;
-        line-height: 49px;
+        line-height: 24px;
         outline: none;
         border: 0;
         background: none;
+        margin-top: 12px;
     }
     .main_left_body_line_input::-webkit-input-placeholder,
     .tel::-webkit-input-placeholder,
@@ -1113,7 +1122,7 @@ select:-webkit-autofill {
     }
     .main_left_body_line_input {
         width: 130px;
-        height: 49px;
+        height: 24px;
         font-size: 14px;
         color: #333;
         float: left;
