--- a/public/css/b_apply/index.css
+++ b/public/css/b_apply/index.css
@@ -103,7 +103,7 @@ body button{
 }
 
 .main_left{
-    height: 473px;
+    height: 512px;
     padding: 10px 0 26px 0;
     width: 60%;
     float: left;
@@ -201,7 +201,7 @@ body button{
     box-shadow:0px 1px 4px 0px rgba(0,0,0,0.19);
     border-radius:5px;
     border:1px solid rgba(105,199,43,1);
-    margin-top:28px;
+    margin-top:20px;
     float: right;
     font-size:14px;
     color:rgba(255,255,255,1);
@@ -220,7 +220,7 @@ body button{
 
 .main_right{
     width: 40%;
-    height:473px;
+    height:512px;
     border-radius:0px 10px 10px 0px;
     box-shadow:-1px 0px 0px 0px rgba(0,0,0,0.1);
     background-color:#fff;
@@ -231,7 +231,7 @@ body button{
 
 .main_right_img{
     width:144px;
-    height:35px;
+    height:auto;
     margin:0 auto;
     display: block;
 }
@@ -480,8 +480,8 @@ color: rgb(0, 0, 0);
      }
      .main_left_line_input{
          width: 80%;
-         height: 53px;
-         line-height: 55px;
+         height: 51px;
+         line-height: 51px;
          border: 0;
          border-radius: 0;
          padding: 0 15px;
