--- a/public/css/b_apply/index.css
+++ b/public/css/b_apply/index.css
@@ -20,11 +20,11 @@ body {
 .main-image{
     height: 100%;
     z-index: 300;
-	background:url(//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bg2x.jpg) no-repeat  center;
+    background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bg2x.jpg") no-repeat center;
+    /*background:url(../img/bg2x.jpg) no-repeat  center;*/
     position: relative;
     background-size: 100% 100%;
     width: 100%;
-    min-height: 661px;
 }
 body button{
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -44,7 +44,7 @@ body button{
 }
 
 .row_img{
-    width: 129px;
+    width: 135px;
     height: 62px;
 }
 
@@ -56,11 +56,11 @@ body button{
     height: 100%;
     /* min-width:1200px; */
 }
- .jumbotron {
+.jumbotron {
     background: none;
-     width: 66.6%;
-     margin: 0 auto;
-     box-sizing: border-box;
+    width: 66.6%;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .four #row1 img {
@@ -75,6 +75,9 @@ body button{
 }
 #row2{
     margin: 30px 0 0 0;
+    min-height: 512px;
+    background: #ffffff;
+    border-radius: 10px;
 }
 
 .bgBack_opa{
@@ -235,7 +238,6 @@ body button{
     height:auto;
     margin:0 auto;
     display: block;
-    width:148px;
 }
 
 .main_right_txt{
@@ -318,12 +320,12 @@ body button{
     text-align: center;
 }
 
-input:-webkit-autofill, 
-textarea:-webkit-autofill, 
+input:-webkit-autofill,
+textarea:-webkit-autofill,
 select:-webkit-autofill {
-background-color: rgb(250, 255, 189);
-background-image: none;
-color: rgb(0, 0, 0);
+    background-color: rgb(250, 255, 189);
+    background-image: none;
+    color: rgb(0, 0, 0);
 }
 
 
@@ -436,108 +438,108 @@ color: rgb(0, 0, 0);
     }
 }
 
- @media (min-width: 450px) and (max-width:1099px) {
-     #row1{display: none;}
-     #row2{margin-top:0;}
-     .selectPc{display: none;}
-     .selectMobile{display: block;}
-     .main-image{background:none;}
-     .main_right{display: none;}
-     .jumbotron {
-         background: none;
-         margin: 0 auto;
-         width: 100%
-     }
-     .main_left{
-         width: 100%;
-         padding: 0;
-         border-radius: 0;
-         border:0;
-         background:none;
-     }
-     .main_left_line_box{
-         width: 100%;
-         border-top: 1px solid #F2F2F2;
-     }
-     .main_left_line{
-         height:55px;
-         background:rgba(255,255,255,1);
-         box-shadow:0px 1px 0px 0px rgba(242,242,242,1);
-         line-height: 55px;
-         margin:0;
-         box-sizing: border-box;;
-         border-bottom: 1px solid #F2F2F2;
-     }
-     .main_left_line_title{
-         width: 20%;
-         color: #515354;
-         font-size:15px;
-         height: 55px;
-         line-height: 55px;
-     }
-     .main_left_line_title_re{
-         font-size: 14px;
-         position: relative;
-         top: -3px;
-     }
-     .main_left_line_input{
-         width: 80%;
-         height: 51px;
-         line-height: 51px;
-         border: 0;
-         border-radius: 0;
-         padding: 0 15px;
-         color: #515354;
-         font-size:15px;
-         text-align: right;
-     }
-     .main_left_line_input::-webkit-input-placeholder {
-         font-size: 15px;
-     }
-     .main_left_line_select{
-         direction: rtl;
-         appearance:none;
-         -moz-appearance:none;
-         -webkit-appearance:none;
-         width: 73%;
-         padding-right: 0;
-     }
-     main_left_line_select option {
-         direction: ltr;
-     }
-     .main_left_line_select_icon{
-         display: block;
-         width: 6px;
-         height:10px;
-         margin-top:22.5px;
-         margin-right: 15px;
-         float: right;
-     }
-     .main_left_line_input_yzm{
-         width: 80%;
-         height: 55px;
-         border: 0;
-     }
-     .yzmInput{
-         width: 60%;
-         text-align: left;
-     }
-     .yzmInput_img{
-         width: 98.5px;
-         height:35px;
-         margin-top:10px;
-         margin-right: 5%;
-     }
-     .main_left_button{
-         width:78.4%;
-         height:35px;
-         line-height: 35px;
-         background:rgba(105,199,43,1);
-         border-radius:35px;
-         font-size:14px;
-         color:rgba(255,255,255,1);
-         letter-spacing: 2px;
-         margin:134px auto 0 auto;
-         float: none;
-     }
- }
+@media (min-width: 450px) and (max-width:1099px) {
+    #row1{display: none;}
+    #row2{margin-top:0;}
+    .selectPc{display: none;}
+    .selectMobile{display: block;}
+    .main-image{background:none;}
+    .main_right{display: none;}
+    .jumbotron {
+        background: none;
+        margin: 0 auto;
+        width: 100%
+    }
+    .main_left{
+        width: 100%;
+        padding: 0;
+        border-radius: 0;
+        border:0;
+        background:none;
+    }
+    .main_left_line_box{
+        width: 100%;
+        border-top: 1px solid #F2F2F2;
+    }
+    .main_left_line{
+        height:55px;
+        background:rgba(255,255,255,1);
+        box-shadow:0px 1px 0px 0px rgba(242,242,242,1);
+        line-height: 55px;
+        margin:0;
+        box-sizing: border-box;;
+        border-bottom: 1px solid #F2F2F2;
+    }
+    .main_left_line_title{
+        width: 20%;
+        color: #515354;
+        font-size:15px;
+        height: 55px;
+        line-height: 55px;
+    }
+    .main_left_line_title_re{
+        font-size: 14px;
+        position: relative;
+        top: -3px;
+    }
+    .main_left_line_input{
+        width: 80%;
+        height: 51px;
+        line-height: 51px;
+        border: 0;
+        border-radius: 0;
+        padding: 0 15px;
+        color: #515354;
+        font-size:15px;
+        text-align: right;
+    }
+    .main_left_line_input::-webkit-input-placeholder {
+        font-size: 15px;
+    }
+    .main_left_line_select{
+        direction: rtl;
+        appearance:none;
+        -moz-appearance:none;
+        -webkit-appearance:none;
+        width: 73%;
+        padding-right: 0;
+    }
+    main_left_line_select option {
+        direction: ltr;
+    }
+    .main_left_line_select_icon{
+        display: block;
+        width: 6px;
+        height:10px;
+        margin-top:22.5px;
+        margin-right: 15px;
+        float: right;
+    }
+    .main_left_line_input_yzm{
+        width: 80%;
+        height: 55px;
+        border: 0;
+    }
+    .yzmInput{
+        width: 60%;
+        text-align: left;
+    }
+    .yzmInput_img{
+        width: 98.5px;
+        height:35px;
+        margin-top:10px;
+        margin-right: 5%;
+    }
+    .main_left_button{
+        width:78.4%;
+        height:35px;
+        line-height: 35px;
+        background:rgba(105,199,43,1);
+        border-radius:35px;
+        font-size:14px;
+        color:rgba(255,255,255,1);
+        letter-spacing: 2px;
+        margin:134px auto 0 auto;
+        float: none;
+    }
+}
