--- a/public/css/bj_login/index.css
+++ b/public/css/bj_login/index.css
@@ -24,10 +24,11 @@ body {
     height: 100%;
     z-index: 300;
     background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/bg2x.jpg") no-repeat center;
-    /*background:url(../img/bg2x.jpg) no-repeat  center;*/
+    /*background: url(../img/bg2x.jpg) no-repeat center;*/
     position: relative;
     background-size: 100% 100%;
     width: 100%;
+    min-height: 661px;
 }
 
 body button {
@@ -79,6 +80,9 @@ body button {
 
 #row2 {
     margin: 30px 0 0 0;
+    min-height: 416px;
+    background: #fff;
+    border-radius: 10px;
 }
 
 .bgBack_opa {
@@ -115,6 +119,7 @@ body button {
     border-right: 1px solid #eeeeee;
     background-color: #fff;
     border-radius: 10px 0 0 10px;
+    min-height: 416px;
 }
 
 /*.aa_click{*/
@@ -125,7 +130,7 @@ body button {
 
 /*}*/
 
-#Emails {
+#vernum {
     margin-left: 9px;
 }
 
@@ -242,8 +247,8 @@ body button {
 .main_left_body_line_icon3 {
     width: 22px;
     height: 22px;
-    /*background-image: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/code.png");*/
-    background-image: url("../img/code.png");
+    background-image: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/bj_login/code.png");
+    /*background-image: url("../img/code.png");*/
     background-repeat: no-repeat;
     background-size: 100% 100%;
     float: left;
@@ -271,9 +276,11 @@ body button {
     border: 0;
     margin-top: 12px;
 }
-.intl-tel-input{
+
+.intl-tel-input {
     margin-top: 12px;
 }
+
 .main_left_body_line_input {
     width: 130px;
     height: 24px;
@@ -292,7 +299,7 @@ body button {
 .tel::-webkit-input-placeholder,
 .yxInput::-webkit-input-placeholder {
     font-size: 12px;
-    line-height: 49px;
+    line-height: 24px;
     color: #B3B3B3;
 }
 
@@ -454,12 +461,12 @@ body button {
 }
 
 .alert {
-    width: 380px;
-    height: 70px;
+    width: 280px;
+    height: 50px;
     background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    line-height: 70px;
+    line-height: 50px;
     position: absolute;
     top: 0;
     left: 0;
@@ -472,20 +479,20 @@ body button {
 }
 
 .alert_img {
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     float: left;
     margin-left: 30px;
-    margin-top: 20px;
+    margin-top: 12px;
     display: block;
 }
 
 .alert_txt {
-    width: 240px;
-    height: 70px;
+    width: 190px;
+    height: 50px;
     float: left;
     margin-left: 20px;
-    font-size: 24px;
+    font-size: 16px;
     color: #515354;
 }
 
@@ -532,6 +539,7 @@ body button {
     border-right: 1px solid #E8E8E8;
     background-color: #fff;
     border-radius: 10px 0 0 10px;
+    min-height: 416px;
 }
 
 #test .now:focus {
@@ -644,6 +652,7 @@ select:-webkit-autofill {
     }
     #row2 {
         margin-top: 35px;
+        background: none;
     }
     .main_left {
         width: 100%;
@@ -700,9 +709,8 @@ select:-webkit-autofill {
     .yxInput {
         width: 80%;
     }
-
-    .tel{
-        width:188px;
+    .tel {
+        width: 188px;
     }
     .main_left_body_line_input {
         width: 60%;
@@ -732,14 +740,13 @@ select:-webkit-autofill {
         height: 20px;
         margin-top: 15px;
     }
-    #Emails {
+    #vernum {
         margin-left: 11px;
         width: 55%;
     }
     #yxInput {
         margin-left: 16.5px;
     }
-
     .main_left_body_line_yzm {
         width: 78px;
         height: 26.5px;
@@ -764,6 +771,7 @@ select:-webkit-autofill {
         width: 100%;
         border-radius: 10px;
         border: 0;
+        min-height: 300px;
     }
     .tit a h4 {
         font-size: 15px;
@@ -887,7 +895,7 @@ select:-webkit-autofill {
     .main_left_body_line_input::-webkit-input-placeholder {
         font-size: 28px;
     }
-    #Emails {
+    #vernum {
         margin-left: 30px;
     }
     #yxInput {
@@ -986,6 +994,7 @@ select:-webkit-autofill {
     }
     #row2 {
         margin-top: 110px;
+        background: none;
     }
     .jumbotron {
         background: none;
@@ -1029,13 +1038,13 @@ select:-webkit-autofill {
     .main_left_body_line_input,
     .tel,
     .yxInput {
-        height: 24px;
+        height: 28px;
         font-size: 28px;
         color: #333;
         float: left;
         display: block;
         margin-left: 7px;
-        line-height: 24px;
+        line-height: 28px;
         outline: none;
         border: 0;
         background: none;
@@ -1054,7 +1063,7 @@ select:-webkit-autofill {
     .find_nav_list ul li {
         margin: 0 50px;
     }
-    #Emails {
+    #vernum {
         margin-left: 30px;
     }
     #yxInput {
@@ -1121,14 +1130,14 @@ select:-webkit-autofill {
         margin: 0 auto;
     }
     .main_left_body_line_input {
-        width: 130px;
-        height: 24px;
+        width: 290px;
+        height: 36px;
         font-size: 14px;
         color: #333;
         float: left;
         display: block;
         margin-left: 7px;
-        line-height: 49px;
+        line-height: 36px;
         outline: none;
         border: 0;
     }
@@ -1155,6 +1164,7 @@ select:-webkit-autofill {
 #code_img{
     cursor: pointer
 }
+
 .loading_app .circular {
     vertical-align: middle;
     display: inline-block;
@@ -1162,14 +1172,16 @@ select:-webkit-autofill {
     width: 20px;
     animation: loading-rotate 2s linear infinite;
 }
+
 .loading_app .circular .path {
     animation: loading-dash 1.5s ease-in-out infinite;
-    stroke-dasharray: 90,150;
+    stroke-dasharray: 90, 150;
     stroke-dashoffset: 0;
     stroke-width: 2;
     stroke: #fff;
     stroke-linecap: round;
 }
+
 @keyframes spinner {
     0% {
         transform: rotate(0deg);
@@ -1178,7 +1190,8 @@ select:-webkit-autofill {
         transform: rotate(180deg);
     }
 }
-@-webkit-keyframes  spinner {
+
+@-webkit-keyframes spinner {
     0% {
         transform: rotate(0deg);
     }
@@ -1186,11 +1199,13 @@ select:-webkit-autofill {
         transform: rotate(180deg);
     }
 }
+
 @keyframes loading-rotate {
     100% {
         transform: rotate(360deg);
     }
 }
+
 @keyframes loading-dash {
     0% {
         stroke-dasharray: 1, 200;
@@ -1205,6 +1220,7 @@ select:-webkit-autofill {
         stroke-dashoffset: -120px;
     }
 }
-.intl-tel-input.allow-dropdown .flag-container:hover .selected-flag{
+
+.intl-tel-input.allow-dropdown .flag-container:hover .selected-flag {
     background: #ffffff !important;
 }
